reports controller needs work!
