# storage/api-docs/api-docs.json
@@ -6530,6 +6530,30 @@
                 }
             }
         },
+        "/telephony/api/reports": {
+            "get": {
+                "tags": [
+                    "Reports - Custom"
+                ],
+                "summary": "Get List of Reports",
+                "description": "",
+                "operationId": "listReportTypes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                }
+            }
+        },
         "/telephony/api/sonus5kcdrs/search/{column}/{search}": {
             "get": {
                 "tags": [
